# kriton-backend

./: Dockerfile  analisis_engine.py  app.py  config.py  conversacion_manager.py  database.py  docker-compose.yml  extractor_lemas.py  main.py  models.py  pyproject.toml  query_generator.py  requirements.txt  tests.http  verify_gemini.py
